--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/style&gt;</p>
 <p class="p1">&lt;/head&gt;</p>
 <p class="p1">&lt;body&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;img src=“Fettle_Static.png" alt=“coming soon&gt;</p>
+<p class="p1"><span class="Apple-converted-space">    </span>&lt;img src=“Fettle_Static.png" alt=“coming soon"&gt;</p>
 <p class="p1">&lt;/body&gt;</p>
 <p class="p1">&lt;/html&gt;</p>
 </body>
